k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blockdb
  labels:
    name: blockdb
    app.kubernetes.io/name: blockdb
    app.kubernetes.io/component: database
